--- a/ToDO.txt
+++ b/ToDO.txt
@@ -27,17 +27,25 @@
 		angle needed to cross the pluto Trajectory
 
  Theoretical foundations:
-    -datatypes and their representation
-    -numerical errors: their occurances and reduction
+
     -idea of integrator schemes: from taylor-expansion to final formulas
     -representation of formulas in butcher tables and how to implement code from there
     -determining order of convergence (power laws) from log-log-plots
     (-post-newtonian/relativistic corrections)
 
+ Latex:
+	-personalize the template
+	-define the structure and the order of topics and results
+	-creating and chosing the plots for each topic
+	-writing:
+		-basics(integrators(euler, leapfrog, runge-kutta)
+		-topic1
+		-topic2
+		-topic3
+		-abstract
+		-conclusion
+
  Other challenges:
-    (-how to call c++ programms / functions from a python script)
-    (-how to unify the plotting python scrips to a complete script that does programm execution, numerical analysis and plotting)
-    -machine leaning approach to achieve initial values from ending position
 
 
   Test:
